--- a/ProductPage.html
+++ b/ProductPage.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+	<link href="PPcss.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 	<!-- Use Flexbox -->
@@ -17,10 +18,12 @@
 			<iframe id="youtube" width="560" height="315" src="https://www.youtube.com/embed/tyrKeThaEJM" frameborder="0" 
 			allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 			</iframe>
+			<div id="item1">
 			<form>
 				<input type="email" id="email" placeholder="Enter your email">
 				<button type="submit" id="submit">Submit</button>
 			</form>
+			</div>
 		</div>
 	</body>
 </html>
