--- a/ProductPage.html
+++ b/ProductPage.html
@@ -15,8 +15,9 @@
 				</div>
 				<div id="hitem2">
 					<nav id="nav-bar">
+						<a href="#item2" class="nav-link">Home<a>
 						<a href="#item2" class="nav-link">About<a>
-						<a href="#img-div" class="nav-link">Drawings<a>
+						<a href="#spacing" class="nav-link">Drawings<a>
 						<a href="#" class="nav-link">Info<a>
 					</nav>
 				</div>
@@ -28,16 +29,23 @@
 				<p id="home"> Floaty's Comissions!</p>
 				
 				<p id="home2"> bringing you cute demon girls since 2015</p>
+				
+				<a id="continue" href="#spacing"> Continue </a>
 			</div>
-			<iframe id="youtube" width="560" height="315" src="https://www.youtube.com/embed/Cg4vNZ67QhY" frameborder="0" 
-			allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-			</iframe>
-		<!--item-->
+			<div id="spacing">
+			</div>
 			<div id="img-div">
 				<img src="https://i.imgur.com/JVlBo7o.png">
 				<img src="https://i.imgur.com/KykGmuy.png">
 				<img src="https://i.imgur.com/Jaw2hM9.png">
 				<img src="https://i.imgur.com/Hf0iY6K.png">
+			</div>
+		<!--item-->
+			
+			<div id="yt-div">
+			<iframe id="youtube" width="560" height="315" src="https://www.youtube.com/embed/Cg4vNZ67QhY" frameborder="0" 
+			allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+			</iframe>
 			</div>
 			<div id="item1">
 			<form id="form">
